Next steps to implement intertemporal RAO handling